add more required meta data for maven central

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -34,4 +34,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <!-- This plugin is only needed for building Trading4j itself. It 
+          is not needed for this example. -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
