--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
     <module>examples</module>
   </modules>
 
+  <developers>
+    <developer>
+      <name>Raik Bieniek</name>
+      <email>dev@voidnode.de</email>
+    </developer>
+  </developers>
+
   <licenses>
     <license>
       <name>GNU General Public License version 3</name>
@@ -198,13 +205,34 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>3.0.1</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.3</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <tagNameFormat>v@{project.version}</tagNameFormat>
             <pushChanges>false</pushChanges>
-            <releaseProfiles>sign, client-metatrader</releaseProfiles>
+            <releaseProfiles>sign</releaseProfiles>
+            <!-- to activate on both, the prepare and the release step -->
+            <arguments>-Pclient-metatrader</arguments>
           </configuration>
         </plugin>
         <plugin>
@@ -254,6 +282,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
