--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.voidnode.trading4j</groupId>
   <artifactId>parent</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Trading4j</name>
@@ -34,7 +34,7 @@
     <url>https://github.com/rbi/trading4j</url>
     <developerConnection>scm:git:git@github.com:rbi/trading4j.git</developerConnection>
     <connection>scm:git:https://github.com/rbi/trading4j.git</connection>
-    <tag>v0.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>GitHub Issues</system>
