Reactivate and fix integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,10 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <inherited>false</inherited>
         <executions>
