make bazel execute tests

--- a/core/src/main/java/de/voidnode/trading4j/indicators/adx/BUILD
+++ b/core/src/main/java/de/voidnode/trading4j/indicators/adx/BUILD
@@ -1,5 +1,5 @@
 java_library (
-  name = "indicators",
+  name = "adx",
   srcs = glob(["*.java"]),
   deps = [
     "//core/src/main/java/de/voidnode/trading4j/api",
