--- a/server/src/main/java/de/voidnode/trading4j/server/protocol/messages/BUILD
+++ b/server/src/main/java/de/voidnode/trading4j/server/protocol/messages/BUILD
@@ -6,5 +6,9 @@ java_library (
   ],
   visibility = [
     "//server/src/main/java/de/voidnode/trading4j/server/protocol:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/protocol:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/protocol/messages:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/protocol/expertadvisor:__pkg__",
   ]
 )
