--- a/server/src/main/java/de/voidnode/trading4j/server/reporting/implementations/BUILD
+++ b/server/src/main/java/de/voidnode/trading4j/server/reporting/implementations/BUILD
@@ -10,5 +10,6 @@ java_library (
   ],
   visibility = [
     "//server/src/main/java/de/voidnode/trading4j/server:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/reporting/implementations:__pkg__",
   ]
 )
