--- a/server/src/main/java/de/voidnode/trading4j/server/oio/BUILD
+++ b/server/src/main/java/de/voidnode/trading4j/server/oio/BUILD
@@ -8,5 +8,7 @@ java_library (
   ],
   visibility = [
     "//server/src/main/java/de/voidnode/trading4j/server:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/oio:__pkg__",
   ]
 )
