--- a/server/src/main/java/de/voidnode/trading4j/server/protocol/BUILD
+++ b/server/src/main/java/de/voidnode/trading4j/server/protocol/BUILD
@@ -15,5 +15,7 @@ java_library (
   visibility = [
     "//server/src/main/java/de/voidnode/trading4j/server:__pkg__",
     "//server/src/main/java/de/voidnode/trading4j/server/oio:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/protocol:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/protocol/expertadvisor:__pkg__",
   ]
 )
