--- a/server/src/main/java/de/voidnode/trading4j/server/protocol/exceptions/BUILD
+++ b/server/src/main/java/de/voidnode/trading4j/server/protocol/exceptions/BUILD
@@ -6,5 +6,8 @@ java_library (
   visibility = [
     "//server/src/main/java/de/voidnode/trading4j/server/protocol:__pkg__",
     "//server/src/main/java/de/voidnode/trading4j/server/oio:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/protocol:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/protocol/expertadvisor:__pkg__",
+    "//server/src/test/java/de/voidnode/trading4j/server/oio:__pkg__",
   ]
 )
