--- a/pom.xml
+++ b/pom.xml
@@ -153,10 +153,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.9.1</version>
+          <version>3.1.0</version>
           <configuration>
             <quiet>true</quiet>
             <nohelp>true</nohelp>
+            <source>8</source>
           </configuration>
           <executions>
             <execution>
